[package]
name = "GBC"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flexbuffers = "2.0.0"
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2.19"
serde = { version = "1.0.204", features = ["derive"] }
